--- a/index.html
+++ b/index.html
@@ -27,15 +27,72 @@
 
 <body>
     <header></header>
+
     <section class="carousel"></section>
-    <section class="tools"></section>
+    
+    <section class="tools">
+       <div class="container">
+        <div class="title">
+            <h3>WHY CHOOSE US</h3>
+            <h2>Tools for business startup to professional</h2>
+            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+        </div>
+       </div>
+    </section>
+
     <section class="aboutUs"></section>
+
     <section class="commit"></section>
-    <section class="solutions"></section>
-    <section class="general"></section>
-    <section class="featured"></section>
-    <section class="testimonials"></section>
-    <section class="ready"></section>
+
+    <section class="solutions">
+        <div class="container">
+            <div class="title">
+                <h3>WE ARE HERE FOR YOU</h3>
+                <h2>Explore Solutions</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+           </div>
+    </section>
+
+    <section class="general">
+        <div class="container">
+            <div class="title">
+                <h3>QUESTIONS AND ANSWERS</h3>
+                <h2>General FAQs</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+           </div>
+    </section>
+
+    <section class="featured">
+        <div class="container">
+            <div class="title">
+                <h3>FEATURED CASES</h3>
+                <h2>Completed Projects</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+           </div>
+    </section>
+
+    <section class="testimonials">
+        <div class="container">
+            <div class="title">
+                <h3>OUR CLIENTS TESTIMONIALS</h3>
+                <h2>What People Say</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+           </div>
+    </section>
+
+    <section class="ready">
+        <div class="container">
+            <div class="title">
+                <h2>Ready to build your own brand community?</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+           </div>
+    </section>
+
     <footer></footer>
 
 
