--- a/index.html
+++ b/index.html
@@ -29,13 +29,43 @@
     <header></header>
 
     <section class="carousel"></section>
-    
+
+    <!-- TOOLS -->
     <section class="tools">
-       <div class="container">
-        <div class="title">
-            <h3>WHY CHOOSE US</h3>
-            <h2>Tools for business startup to professional</h2>
-            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+       <div class="tools__content">
+            <div class="title">
+                <h3>WHY CHOOSE US</h3>
+                <h2>Tools for business startup to professional</h2>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+
+            <div class="container">
+                <div class="row bottom_grids text-center">
+
+                    <div class="col-sm">
+                       <div class="tools__item">
+                            <img src="./img/s1.png" alt="item1">
+                            <h3 class="my-3">Interactive</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>                         
+                       </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <div class="tools__item">
+                            <img src="./img/s2.png" alt="item2">
+                            <h3 class="my-3">Business</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>                         
+                       </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <div class="tools__item">
+                            <img src="./img/s3.png" alt="item3">
+                            <h3 class="my-3">Inspiration</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium tempora rerum perspiciatis?</p>                         
+                       </div>
+                    </div>
+              </div>            
         </div>
        </div>
     </section>
